# bld

./: CLAUDE.md  README.md  bld  hello  hello.elf  pyproject.toml  test_executable.py  test_interpreter.py
bootstrap/: bld.bld  compiler.bld  elf.bld  parser.bld  rust_emit.bld  traverser.bld  types.bld  x86.bld
docs/: README.md  almost-there.md  bld-format.md  cli-design.md  structure.md  syntax.md
docs/bootstrap/: aarch64.md  aligner.md  analyzer.md  bld.md  calibrate.md  cli.md  compiler.md  elf.md  github_markdown.md  grammar.md  lowering.md  lowering_aarch64.md  lowering_riscv.md  lowering_x86.md  markdown.md  optimizer.md  parser.md  pattern.md  riscv.md  rust_emit.md  tokenizer.md  translate_x86_riscv.md  traverser.md  types.md  x86.md
docs/examples/: hello.md
examples/: hello.bld
examples/ai/: attention.bld  cross_entropy.bld  dense.bld  forward.bld  mlp.bld  softmax.bld  transformer.bld
examples/blas/: dasum.bld  daxpy.bld  dcopy.bld  ddot.bld  dgemm.bld  dgemv.bld  dger.bld  dnrm2.bld  drot.bld  drotg.bld  drotm.bld  drotmg.bld  dsyr.bld  (+12 more)
src/: aarch64.bld  aligner.bld  analyze.bld  analyzer.bld  arch.bld  ascii.bld  bit.bld  bld.bld  bld_cli  bld_new  byte.bld  calibrate.bld  char.bld  check_args.bld  classify.bld  cli.bld  command_dispatch.bld  compile.bld  compile_command.bld  compiler.bld  compose.bld  conservation.bld  cost.bld  cost_command.bld  d.bld  data.bld  del.bld  dispatch.bld  dispatch_cli.bld  display.bld  elf.bld  emit.bld  entry.bld  error.bld  file.bld  generate_bld_py.bld  github_markdown.bld  grammar.bld  handlers.bld  kilobyte.bld  (+40 more)
(+328 files in other folders)
