[project]
name = "bld"
version = "0.1.0"
description = "BLD - Boundary/Link/Dimension structural language and interpreter"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
bld = "bld:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
